Frontend styles added

--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>proba</title>
+    <title>Probabilidad y Estadística</title>
     <link rel="stylesheet" href="style.css">
     <script src="scripts.js"></script>
 </head>
 <body>
-
-<div><img id="capturaEnunciado" src="" alt=""></div>
-<div><button onclick="mostrarRespuesta('visible')">Mostrar respuesta</button></div>  
-<div><img id="capturaRespuesta" src="" alt=""></div>
-
-</body>
+    <div class="container">
+        <h1>Random Exercise: Probabilidad y Estadística</h1>
+        <div class="exercise-container">
+            <img id="capturaEnunciado" src="" alt="Enunciado del ejercicio">
+            <div>
+                <button onclick="mostrarRespuesta('visible')">Mostrar Respuesta</button>
+            </div>
+            <img id="capturaRespuesta" src="" alt="Respuesta del ejercicio">
+        </div>
+        <footer>
+            <p>Aplicación diseñada para los estudiantes de la UNSAdA.</p>
+        </footer>
+    </div>
 </html>
 
