--- a/index.html
+++ b/index.html
@@ -6,19 +6,26 @@
     <title>Probabilidad y Estadística</title>
     <link rel="stylesheet" href="style.css">
     <script src="scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 <body>
     <div class="container">
         <h1>Random Exercise: Probabilidad y Estadística</h1>
+        <p>Aplicación diseñada para los estudiantes de la UNSAdA.</p>
+        <p>Recargar la pagina para un nuevo ejercicio</p>
+
         <div class="exercise-container">
             <img id="capturaEnunciado" src="" alt="Enunciado del ejercicio">
             <div>
                 <button onclick="mostrarRespuesta('visible')">Mostrar Respuesta</button>
+                <button onclick="refreshPage">Ejercicio nuevo</button>
             </div>
+           
             <img id="capturaRespuesta" src="" alt="Respuesta del ejercicio">
         </div>
         <footer>
-            <p>Aplicación diseñada para los estudiantes de la UNSAdA.</p>
+  
         </footer>
     </div>
 </html>
