boton Ejercicio nuevo comentado

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img id="capturaEnunciado" src="" alt="Enunciado del ejercicio">
             <div>
                 <button onclick="mostrarRespuesta('visible')">Mostrar Respuesta</button>
-                <button onclick="refreshPage">Ejercicio nuevo</button>
+                <!-- <button onclick="refreshPage">Ejercicio nuevo</button> -->
             </div>
            
             <img id="capturaRespuesta" src="" alt="Respuesta del ejercicio">
